cleanup typos, removed guava